# Math156

./: .gitignore  LICENSE  README.md  bank.xml  build_docs.py  dashboard.ipynb  index.html  requirements.txt
dashboard/: README.md  setup.cfg  setup.py  update_viewer.py
dashboard/checkit/: _main_.py  bank.py  dashboard.py  exercise.py  outcome.py  utils.py  xml.py
dashboard/checkit/static/: READ.me  _init_.py  bank.xml  dashboard.ynb  generator.sgae  gitignore.txt  template.xml
dashboard/checkit/wrapper/: _init_.py  wrapper.sage
docs/: global.css  index.html
docs/codecell/: index.html
viewer/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
viewer/public/: manifest.json
viewer/src/: App.svelte  main.ts  types.ts
viewer/src/components/: CodeCell.svelte  Exercise.svelte  Front.svelte  Jumbotron.svelte  Nav.svelte  Sorter.svelte
viewer/src/components/dropdowns/: Outcome.svelte
viewer/src/routes/: Assessment.svelte  Bank.svelte  Export.svelte  Home.svelte  NotFound.svelte  Outcome.svelte  OutcomeRedirect.svelte  index.ts
viewer/src/spatext/Elements/: Knowl.svelte  KnowlContent.svelte  List.svelte  Math.svelte  Paragraph.svelte  SectionContent.svelte  Title.svelte
viewer/src/spatext/NodeList/: ContentNodes.svelte  ParagraphNodes.svelte  TitleNodes.svelte
viewer/src/spatext/xsl/: html.xsl  latex.xsl  pretext.xsl
viewer/src/stores/: banks.ts  codecell.ts  instructor.ts
viewer/src/templates/: assessmentTemplate.tex  canvasManifest.xml  canvasOutcome.xml
viewer/src/utils/: index.ts
